--- a/Kelime Ezber Sistemi/Form_AnaSayfa.resx
+++ b/Kelime Ezber Sistemi/Form_AnaSayfa.resx
@@ -170,4 +170,7 @@
   <metadata name="bindingSource1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 56</value>
   </metadata>
+  <metadata name="contextMenuStrip_kullanıcıAdı.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>154, 56</value>
+  </metadata>
 </root>
